--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
         <link rel="stylesheet" type="text/css" href="/public/css/index.css" />
     </head>
     <body>
-        <h1 style="font-family: var(--brand-font)">DIRTYCOINS</h1>
+        <nav class="nav">
+            <div class="nav-logo">
+                <img src="/public/img/logo_without_text.png" alt="Logo without text" />
+            </div>
+            <div class="nav-links">
+                <a><span class="nav-link-text">VI</span></a>
+                <a href="/en.html"><span class="nav-link-text">EN</span></a>
+                <a href="https://dirtycoins.vn"><span class="nav-link-text">Shop</span></a>
+            </div>
+        </nav>
+
+        <!-- Main Content -->
+        <main>
+            <div class="starter-logo-container">
+                <div class="starter-logo-text">
+                    <div>DIRTYCOINS</div>
+                    <img src="/public/img/signature_rounded.png" alt="Logo Without Text" />
+                </div>
+                <div class="starter-logo-made-in-vietnam">madeinvietnam</div>
+                <div class="starter-logo-swipe-down">
+                    <span>Cuộn xuống để xem thêm</span>
+                    <img
+                        src="/public/img/chevron-down.png"
+                        alt="chevron-down"
+                        class="starter-logo-swipe-down-icon"
+                    />
+                </div>
+            </div>
+        </main>
     </body>
 </html>
