--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" type="text/css" href="/public/css/index.css" />
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popmotion/11.0.5/popmotion.cjs.min.js"
-            integrity="sha512-QMUZJusbTPq9pAsWJJ0R6M7mSUYpHLabs9SOhCDA7/4gM41QFLni+XEQZIx+9r9xUhYOZNAjZ9Lh7CaBcrFY8Q=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.css"
+        />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.2/fullpage.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@animxyz/core" />
+
         <script type="text/javascript" src="/public/js/index.js"></script>
     </head>
     <body>
@@ -32,138 +33,192 @@
         </nav>
 
         <!-- Main Content -->
-        <main>
-            <div class="starter-logo-container">
-                <div class="starter-logo-text">
-                    <div>DIRTYCOINS</div>
-                    <img src="/public/img/signature_rounded.png" alt="Logo Without Text" />
-                </div>
-                <div class="starter-logo-made-in-vietnam">madeinvietnam</div>
-                <div class="starter-logo-swipe-down">
-                    <span>Cuộn xuống để xem thêm</span>
-                    <img
-                        src="/public/img/chevron-down.png"
-                        alt="chevron-down"
-                        class="starter-logo-swipe-down-icon"
-                    />
-                </div>
-            </div>
-            <div class="container">
-                <div class="content">
-                    <div class="content-item">
+        <div id="fullpage">
+            <section class="section starter-section">
+                <div class="starter-logo-container">
+                    <div class="starter-logo-text">
+                        <div>DIRTYCOINS</div>
+                        <img src="/public/img/signature_rounded.png" alt="Logo Without Text" />
+                    </div>
+                    <div class="starter-logo-made-in-vietnam">madeinvietnam</div>
+                    <div class="starter-logo-swipe-down">
+                        <span>Cuộn xuống để xem thêm</span>
                         <img
-                            src="/public/img/content_1.jpeg"
-                            alt="Content img"
-                            class="content-img"
-                        />
-                    </div>
-                    <div class="content-item content-text-container">
-                        <h2 class="content-heading">
-                            Tiền thân của Localbrand được yêu thích nhất
-                        </h2>
-                        <p class="content-text">
-                            Con đường chinh phục Streetwear của thương hiệu DirtyCoins được bắt đầu
-                            từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một thương hiệu
-                            Việt mang văn hóa đường phố. Với tiền thân là The Yars Shop – chuyên
-                            kinh doanh trang phục thể thao dành cho nam giới. The Yars Shop không có
-                            nhận diện hay bản sắc thương hiệu rõ ràng, sớm trở thành một nỗ lực kinh
-                            doanh không mấy thành công từ thuở đầu.
-                        </p>
-                        <p class="content-text">
-                            Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop là bước
-                            đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu khiêm tốn của The
-                            Yars Shop với tâm huyết và tinh thần của tuổi trẻ từ năm 2017.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="content">
-                    <div class="content-item content-text-container">
-                        <h2 class="content-heading">
-                            Tiền thân của Localbrand được yêu thích nhất
-                        </h2>
-                        <p class="content-text">
-                            Con đường chinh phục Streetwear của thương hiệu DirtyCoins được bắt đầu
-                            từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một thương hiệu
-                            Việt mang văn hóa đường phố. Với tiền thân là The Yars Shop – chuyên
-                            kinh doanh trang phục thể thao dành cho nam giới. The Yars Shop không có
-                            nhận diện hay bản sắc thương hiệu rõ ràng, sớm trở thành một nỗ lực kinh
-                            doanh không mấy thành công từ thuở đầu.
-                        </p>
-                        <p class="content-text">
-                            Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop là bước
-                            đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu khiêm tốn của The
-                            Yars Shop với tâm huyết và tinh thần của tuổi trẻ từ năm 2017.
-                        </p>
-                    </div>
-                    <div class="content-item">
-                        <img
-                            src="/public/img/content_1.jpeg"
-                            alt="Content img"
-                            class="content-img"
+                            src="/public/img/chevron-down.png"
+                            alt="chevron-down"
+                            class="starter-logo-swipe-down-icon"
                         />
                     </div>
                 </div>
-            </div>
-            <div class="container">
-                <div class="content">
-                    <div class="content-item">
-                        <img
-                            src="/public/img/content_1.jpeg"
-                            alt="Content img"
-                            class="content-img"
-                        />
-                    </div>
-                    <div class="content-item content-text-container">
-                        <h2 class="content-heading">
-                            Tiền thân của Localbrand được yêu thích nhất
-                        </h2>
-                        <p class="content-text">
-                            Con đường chinh phục Streetwear của thương hiệu DirtyCoins được bắt đầu
-                            từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một thương hiệu
-                            Việt mang văn hóa đường phố. Với tiền thân là The Yars Shop – chuyên
-                            kinh doanh trang phục thể thao dành cho nam giới. The Yars Shop không có
-                            nhận diện hay bản sắc thương hiệu rõ ràng, sớm trở thành một nỗ lực kinh
-                            doanh không mấy thành công từ thuở đầu.
-                        </p>
-                        <p class="content-text">
-                            Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop là bước
-                            đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu khiêm tốn của The
-                            Yars Shop với tâm huyết và tinh thần của tuổi trẻ từ năm 2017.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="content">
-                    <div class="content-item content-text-container">
-                        <h2 class="content-heading">
-                            Tiền thân của Localbrand được yêu thích nhất
-                        </h2>
-                        <p class="content-text">
-                            Con đường chinh phục Streetwear của thương hiệu DirtyCoins được bắt đầu
-                            từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một thương hiệu
-                            Việt mang văn hóa đường phố. Với tiền thân là The Yars Shop – chuyên
-                            kinh doanh trang phục thể thao dành cho nam giới. The Yars Shop không có
-                            nhận diện hay bản sắc thương hiệu rõ ràng, sớm trở thành một nỗ lực kinh
-                            doanh không mấy thành công từ thuở đầu.
-                        </p>
-                        <p class="content-text">
-                            Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop là bước
-                            đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu khiêm tốn của The
-                            Yars Shop với tâm huyết và tinh thần của tuổi trẻ từ năm 2017.
-                        </p>
-                    </div>
-                    <div class="content-item">
-                        <img
-                            src="/public/img/content_1.jpeg"
-                            alt="Content img"
-                            class="content-img"
-                        />
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="content">
+                        <div class="content-item content-img-wrapper">
+                            <div class="item-group" xyz="fade-100% right-5 duration-7 delay-8">
+                                <img
+                                    src="/public/img/content_1.jpeg"
+                                    alt="Content img"
+                                    class="content-img xyz-out"
+                                />
+                            </div>
+                            <div class="item-group" xyz="fade-100% ease right-2 up-2 delay-12">
+                                <div class="content-img-frame xyz-out"></div>
+                            </div>
+                        </div>
+                        <div class="content-item content-text-container">
+                            <div class="item-group" xyz="fade-100% down-4 delay-4">
+                                <h2 class="content-heading xyz-out">
+                                    Tiền thân của Localbrand được yêu thích nhất
+                                </h2>
+                            </div>
+                            <div class="item-group" xyz="fade-100% down-4 delay-8">
+                                <p class="content-text xyz-out">
+                                    Con đường chinh phục Streetwear của thương hiệu DirtyCoins được
+                                    bắt đầu từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một
+                                    thương hiệu Việt mang văn hóa đường phố. Với tiền thân là The
+                                    Yars Shop – chuyên kinh doanh trang phục thể thao dành cho nam
+                                    giới. The Yars Shop không có nhận diện hay bản sắc thương hiệu
+                                    rõ ràng, sớm trở thành một nỗ lực kinh doanh không mấy thành
+                                    công từ thuở đầu.
+                                </p>
+                                <p class="content-text xyz-out">
+                                    Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop
+                                    là bước đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu
+                                    khiêm tốn của The Yars Shop với tâm huyết và tinh thần của tuổi
+                                    trẻ từ năm 2017.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="content">
+                        <div class="content-item content-text-container">
+                            <div class="item-group" xyz="fade-100% down-4">
+                                <h2 class="content-heading xyz-out">
+                                    Tiền thân của Localbrand được yêu thích nhất
+                                </h2>
+                            </div>
+                            <div class="item-group" xyz="fade-100% down-4 delay-8">
+                                <p class="content-text xyz-out">
+                                    Con đường chinh phục Streetwear của thương hiệu DirtyCoins được
+                                    bắt đầu từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một
+                                    thương hiệu Việt mang văn hóa đường phố. Với tiền thân là The
+                                    Yars Shop – chuyên kinh doanh trang phục thể thao dành cho nam
+                                    giới. The Yars Shop không có nhận diện hay bản sắc thương hiệu
+                                    rõ ràng, sớm trở thành một nỗ lực kinh doanh không mấy thành
+                                    công từ thuở đầu.
+                                </p>
+                                <p class="content-text xyz-out">
+                                    Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop
+                                    là bước đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu
+                                    khiêm tốn của The Yars Shop với tâm huyết và tinh thần của tuổi
+                                    trẻ từ năm 2017.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="content-item content-img-wrapper">
+                            <div class="item-group" xyz="fade-100% left-5 duration-7 delay-8">
+                                <img
+                                    src="/public/img/content_1.jpeg"
+                                    alt="Content img"
+                                    class="content-img xyz-out"
+                                />
+                            </div>
+                            <div class="item-group" xyz="fade-100% ease left-2 up-2 delay-12">
+                                <div class="content-img-frame xyz-out"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="content">
+                        <div class="content-item content-img-wrapper">
+                            <div class="item-group" xyz="fade-100% right-5 duration-7 delay-8">
+                                <img
+                                    src="/public/img/content_1.jpeg"
+                                    alt="Content img"
+                                    class="content-img xyz-out"
+                                />
+                            </div>
+                            <div class="item-group" xyz="fade-100% ease right-2 up-2 delay-12">
+                                <div class="content-img-frame xyz-out"></div>
+                            </div>
+                        </div>
+                        <div class="content-item content-text-container">
+                            <div class="item-group" xyz="fade-100% down-4 delay-4">
+                                <h2 class="content-heading xyz-out">
+                                    Tiền thân của Localbrand được yêu thích nhất
+                                </h2>
+                            </div>
+                            <div class="item-group" xyz="fade-100% down-4 delay-8">
+                                <p class="content-text xyz-out">
+                                    Con đường chinh phục Streetwear của thương hiệu DirtyCoins được
+                                    bắt đầu từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một
+                                    thương hiệu Việt mang văn hóa đường phố. Với tiền thân là The
+                                    Yars Shop – chuyên kinh doanh trang phục thể thao dành cho nam
+                                    giới. The Yars Shop không có nhận diện hay bản sắc thương hiệu
+                                    rõ ràng, sớm trở thành một nỗ lực kinh doanh không mấy thành
+                                    công từ thuở đầu.
+                                </p>
+                                <p class="content-text xyz-out">
+                                    Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop
+                                    là bước đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu
+                                    khiêm tốn của The Yars Shop với tâm huyết và tinh thần của tuổi
+                                    trẻ từ năm 2017.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="content">
+                        <div class="content-item content-text-container">
+                            <div class="item-group" xyz="fade-100% down-4">
+                                <h2 class="content-heading xyz-out">
+                                    Tiền thân của Localbrand được yêu thích nhất
+                                </h2>
+                            </div>
+                            <div class="item-group" xyz="fade-100% down-4 delay-8">
+                                <p class="content-text xyz-out">
+                                    Con đường chinh phục Streetwear của thương hiệu DirtyCoins được
+                                    bắt đầu từ 2017 tại Sài Gòn - Việt Nam, xuất phát ý tưởng về một
+                                    thương hiệu Việt mang văn hóa đường phố. Với tiền thân là The
+                                    Yars Shop – chuyên kinh doanh trang phục thể thao dành cho nam
+                                    giới. The Yars Shop không có nhận diện hay bản sắc thương hiệu
+                                    rõ ràng, sớm trở thành một nỗ lực kinh doanh không mấy thành
+                                    công từ thuở đầu.
+                                </p>
+                                <p class="content-text xyz-out">
+                                    Bù lại, kinh nghiệm và sự cầu tiến từ thất bại của The Yars Shop
+                                    là bước đệm lớn giúp DirtyCoins được xây dựng nên từ doanh thu
+                                    khiêm tốn của The Yars Shop với tâm huyết và tinh thần của tuổi
+                                    trẻ từ năm 2017.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="content-item content-img-wrapper">
+                            <div class="item-group" xyz="fade-100% left-5 duration-7 delay-8">
+                                <img
+                                    src="/public/img/content_1.jpeg"
+                                    alt="Content img"
+                                    class="content-img xyz-out"
+                                />
+                            </div>
+                            <div class="item-group" xyz="fade-100% ease left-2 up-2 delay-12">
+                                <div class="content-img-frame xyz-out"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </body>
 </html>
