starter images showcase

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script type="text/javascript" src="/public/js/index.js"></script>
     </head>
     <body>
-        <nav class="nav">
+        <!-- <nav class="nav">
             <div class="nav-logo">
                 <img src="/public/img/logo_without_text.png" alt="Logo without text" />
             </div>
@@ -30,25 +30,143 @@
                 <a href="/en.html"><span class="nav-link-text">EN</span></a>
                 <a href="https://dirtycoins.vn"><span class="nav-link-text">Shop</span></a>
             </div>
-        </nav>
+        </nav> -->
 
         <!-- Main Content -->
         <div id="fullpage">
             <section class="section starter-section">
+                <div
+                    style="
+                        width: 15%;
+                        position: absolute;
+                        top: 5%;
+                        left: 4%;
+                        transform: rotate(-10deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-5 duration-10 small-5">
+                        <img src="/public/img/vision-1.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 13%;
+                        position: absolute;
+                        top: 2%;
+                        right: 25%;
+                        transform: rotate(5deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-12 duration-10">
+                        <img src="/public/img/vision-2.jpg" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 20%;
+                        position: absolute;
+                        bottom: 5%;
+                        right: 3%;
+                        transform: rotate(2deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-15 duration-8">
+                        <img src="/public/img/wechoice_2.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 20%;
+                        position: absolute;
+                        top: 5%;
+                        right: 2%;
+                        transform: rotate(-7deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-18 duration-7">
+                        <img src="/public/img/wechoice_1.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 27%;
+                        position: absolute;
+                        bottom: 5%;
+                        left: 3%;
+                        transform: rotate(4deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-20 duration-7">
+                        <img src="/public/img/collab.jpg" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        position: absolute;
+                        width: 15%;
+                        top: 3%;
+                        left: 40%;
+                        transform: rotate(-2deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-20 duration-9">
+                        <img src="public/img/cover.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 17%;
+                        position: absolute;
+                        right: 20%;
+                        bottom: 14%;
+                        transform: rotate(70deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-21 duration-9">
+                        <img src="public/img/dico.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 30%;
+                        position: absolute;
+                        bottom: 4%;
+                        left: 35%;
+                        transform: rotate(-3deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-22 duration-6">
+                        <img src="public/img/banner-chinh-2.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+                <div
+                    style="
+                        width: 13%;
+                        position: absolute;
+                        left: 21%;
+                        top: 5%;
+                        transform: rotate(3deg);
+                    "
+                >
+                    <div class="item-group" xyz="fade-100% small-5 delay-23 duration-7">
+                        <img src="public/img/signature_y.png" alt="Image" style="width: 100%" />
+                    </div>
+                </div>
+
                 <div class="starter-logo-container">
-                    <div class="starter-logo-text">
+                    <!-- <div class="starter-logo-text">
                         <div>DIRTYCOINS</div>
                         <img src="/public/img/signature_rounded.png" alt="Logo Without Text" />
                     </div>
-                    <div class="starter-logo-made-in-vietnam">madeinvietnam</div>
-                    <div class="starter-logo-swipe-down">
+                    <div class="starter-logo-made-in-vietnam">madeinvietnam</div> -->
+                    <!-- <div class="starter-logo-swipe-down">
                         <span>Cuộn xuống để xem thêm</span>
                         <img
                             src="/public/img/chevron-down.png"
                             alt="chevron-down"
                             class="starter-logo-swipe-down-icon"
                         />
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section class="section">
