update tags for seo optimization

--- a/index.html
+++ b/index.html
@@ -3,7 +3,32 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <title>DirtyCoins | madeinvietnam</title>
+        <meta
+            name="description"
+            content="DirtyCoins Studio, thương hiệu thời trang đến từ Việt Nam với chất liệu cao cấp với thiết kế mang đậm văn hoá đường phố."
+        />
+        <link rel="shortcut icon" href="/public/img/favicon.png" type="image/png" />
+        <link rel="canonical" href="https://dirtycoins-showcase.jameskaois.com/" />
+        <meta name="keywords" content="DirtyCoins | VIETNAMESE STREETWEAR BRAND" />
+
+        <meta property="og:title" content="DirtyCoins | madeinvietnam" />
+        <meta
+            property="og:description"
+            content="DirtyCoins Studio, thương hiệu thời trang đến từ Việt Nam với chất liệu cao cấp với thiết kế mang đậm văn hoá đường phố."
+        />
+        <meta property="og:url" content="https://dirtycoins-showcase.jameskaois.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="DirtyCoins Showcase" />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="DirtyCoins | madeinvietnam" />
+        <meta
+            name="twitter:description"
+            content="DirtyCoins Studio, thương hiệu thời trang đến từ Việt Nam với chất liệu cao cấp với thiết kế mang đậm văn hoá đường phố."
+        />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -72,6 +97,10 @@
 
         <!-- Main Content -->
         <div id="fullpage">
+            <h1 style="opacity: 0">
+                DirtyCoins Studio, thương hiệu thời trang đến từ Việt Nam với chất liệu cao cấp với
+                thiết kế mang đậm văn hoá đường phố.
+            </h1>
             <section class="section starter-section">
                 <div class="starter-images-container">
                     <div
