active nav link

--- a/index.html
+++ b/index.html
@@ -182,11 +182,13 @@
 
         <nav class="nav">
             <div class="nav-content">
-                <div class="nav-logo">
-                    <img src="/public/img/logo_without_text.png" alt="Logo without text" />
-                </div>
+                <a href="/">
+                    <div class="nav-logo">
+                        <img src="/public/img/logo_without_text.png" alt="Logo without text" />
+                    </div>
+                </a>
                 <div class="nav-links">
-                    <a><span class="nav-link-text">VI</span></a>
+                    <a><span class="nav-link-text active">VI</span></a>
                     <a href="/en.html"><span class="nav-link-text">EN</span></a>
                     <a href="https://dirtycoins.vn"><span class="nav-link-text">Shop</span></a>
                 </div>
