--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                     <svg class="circular-border-tablet">
                         <circle cx="130" cy="130" r="130"></circle>
                     </svg>
+
+                    <svg class="circular-border-mobile">
+                        <circle cx="115" cy="115" r="115"></circle>
+                    </svg>
                     <div class="circle-border"></div>
 
                     <script>
