update og image and fix video play on mobile

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <meta property="og:url" content="https://dirtycoins-showcase.jameskaois.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="DirtyCoins Showcase" />
+        <meta property="og:image" content="/public/img/og_image.webp" />
 
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="DirtyCoins | madeinvietnam" />
@@ -28,6 +29,7 @@
             name="twitter:description"
             content="DirtyCoins Studio, thương hiệu thời trang đến từ Việt Nam với chất liệu cao cấp với thiết kế mang đậm văn hoá đường phố."
         />
+        <meta name="twitter:image" content="/public/img/og_image.webp" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
